Ensure workers start correctly and adjust kiosk spacing

--- a/resources/assets/sass/kiosk.scss
+++ b/resources/assets/sass/kiosk.scss
@@ -38,7 +38,7 @@
   }
 
   .content {
-    min-height: 580px;
+    min-height: 615px;
 
     .info-box{
       overflow-y: hidden;
